--- a/codedumdum.html
+++ b/codedumdum.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Video from GitHub Pages</h1>
   <video width="640" height="360" controls autoplay muted>
-    <source src="https://architx-bk.github.io/your-repository/cheem%20tapak%20dam%20dam.mp4" type="video/mp4">
+    <source src="https://architx-bk.github.io/architx-bk.github.io-two/cheem%20tapak%20dam%20dam.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
